@@ -6,7 +6,7 @@ test_that("remotes from new repo",{
   expect_error(git_remote_refspecs(repo = repo))
   expect_error(git_remote_set_url('https://github.com/foo/bar', repo = repo))
   expect_error(git_remote_set_pushurl('https://github.com/foo/bar', repo = repo))
-  expect_equal(git_remote_add('https://github.com/jeroen/webp', name = 'jeroen', repo = repo), 'jeroen')
+  expect_equal(git_remote_add('https://github.com/jeroen/webp', remote = 'jeroen', repo = repo), 'jeroen')
   git_fetch('jeroen', repo = repo)
   git_branch_create('master', 'jeroen/master', repo = repo)
   git_branch_create('testje', git_commit_id('jeroen/master', repo = repo), checkout = FALSE, repo = repo)
@@ -35,7 +35,7 @@ test_that("remotes after clone", {
   expect_equal(remotelist$name, 'origin')
   expect_equal(remotelist$url, 'https://github.com/r-lib/gert')
   expect_error(git_remote_add('https://github.com/jeroen/gert', repo = repo))
-  expect_equal(git_remote_add('https://github.com/jeroen/gert', name = 'myfork', repo = repo), 'myfork')
+  expect_equal(git_remote_add('https://github.com/jeroen/gert', remote = 'myfork', repo = repo), 'myfork')
   remotelist <- git_remote_list(repo = repo)
   expect_equal(sort(remotelist$name), c("myfork", 'origin'))
   expect_equal(sort(remotelist$url), c("https://github.com/jeroen/gert", 'https://github.com/r-lib/gert'))
